public enum Category {
    FOOD,
    EDUCATION,
    TRANSPORTATION,
    SHOPPING,
    ENTERTAINMENT,
    HEALTHCARE,
    HOUSING,
    OTHER;
}
