package enumstructure;

public enum Priority {
    HIGH,
    MEDIUM,
    LOW
}
